MOre fixes after review